# Hand_written_digit_classifier

./: CNN_225k_param_model.keras  README.md  cnn.ipynb  main.py  pyproject.toml  requirements.txt
