[project]
name = "cnn"
version = "0.1.0"
description = "A handwritten digit classifier that recognizes digits (0–9) drawn on a canvas using a MNIST CNN model built and trained from scratch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
